commit 4 11 mongo db и стастистика